Bug 1133246 - Fix wrong buttons alignment with content on about pages using info-pages.css. r=jaws
UltraBlame original commit: 9e8cbc32295737b355af6a19ecbeee6a13ac37e3

--- a/toolkit/themes/shared/in-content/info-pages.inc.css
+++ b/toolkit/themes/shared/in-content/info-pages.inc.css
@@ -366,6 +366,27 @@ width
 150px
 ;
 }
+.
+button
+-
+container
+>
+button
+:
+first
+-
+child
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
 tree
 {
 min
